test/sema/typeck/tuple/field-assignment-wrong-type.dora
fn f(mut x: (Int, Bool), v: Bool) {
    x.0 = v;
}
